<resources>
    <string name="app_name">Hathi Browser</string>
    <string name="status_complete">Ready</string>
    <string name="status_loading">Loading: </string>
    <string name="browser_name">Hathi Browser Version 1.0</string>
    <string name="refresh">Refresh</string>
    <string name="back">Go back</string>
    <string name="forward">Go Forward</string>
    <string name="quit">Quit</string>
    <string name="home">Home</string>
    <string name="set_as_homepage">Set as Homepage</string>
    <string name="search">Search</string>
    <string name="hint_search_keywords">Search keywords</string>

    <string name="google_query">https://www.google.com/search?q=</string>
    <string name="ddg_query">https://duckduckgo.com/?q=</string>
    <string name="wiki_query">https://en.wikipedia.org/w/index.php?search=</string>
    <string name="bing_query">https://www.bing.com/search?q=</string>
    <string name="ads_blocked">Ads blocked</string>
    <string name="snack_number_of_ads_blocked">Total ads blocked: %d</string>
</resources>